# data-doctor

./: .gitignore  README.md  pyproject.toml  requirements-dev.text  requirements.txt  setup.cfg
.github/workflows/: python-tests.yml  test.yml
data-doctor/: cleaner.py  transformer.py  validator.py
examples/: demo_cleaning.ipynb
src/data_doctor/: __init__.py  cleaner.py  io.py  pipeline.py  validator.py
tests/: test_cleaning.py  test_pipeline.py  test_transformer.py  test_validator.py
