[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_doctor_lib"
version = "0.1.0"
description = "A Python library for cleaning and preprocessing pandas DataFrames with an optional PyQt GUI"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Noah Harshbarger", email = "noahharshb@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    "PyQt5>=5.15.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
