[metadata]
name = data-doctor
version = 0.1.0
author = Noah Harshbarger
author_email = noahharshb@gmail.com
description = Python library for cleaning and preprocessing pandas DataFrames with PyQt GUI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.9

[options]
packages = find:
package_dir =
    = src
install_requires =
    pandas>=2.0.0
    numpy>=1.25.0
    scikit-learn>=1.3.0
    PyQt5>=5.15.9

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.5.0
    black>=23.7.0
    flake8>=6.1.0
